обновление полностью в теле
